# GL5-Mini-Project-DevOps

./: .gitbook.yaml  README.md  SUMMARY.md  application.yaml  docker-compose-sonarQube.yml  main-application.yaml  monitoring-app.yaml  monitoring-application.yaml  readme.md
.github/workflows/: test_lint_deploy.yaml
app/: deployment.yaml
documentation/: SUMMARY.md
documentation/cicd/: build-push.md  code-quality.md  jobs-breakdown.md  overview.md  security-scan.md
documentation/contributing/: guidelines.md  pull-request.md
documentation/development/: linting-formatting.md  testing.md
documentation/overview/: key-features.md  purpose-and-goals.md
documentation/setup/: directory-structure.md  installation.md  prerequisites.md
fastapi-docker-app/: .gitignore  .isort.cfg  .pre-commit-config.yaml  .ruff.toml  Dockerfile  pyproject.toml  sonar-project.properties
fastapi-docker-app/alembic/: env.py
fastapi-docker-app/alembic/versions/: db7e00004c6d_initial_migration.py
fastapi-docker-app/app/: crud.py  database.py  main.py  models.py
fastapi-docker-app/tests/: test_main.py
kubernetes/: deployment.yaml  service.yaml
monitoring/: Chart.yaml  values.yaml
